--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="https://s3.getstickerpack.com/storage/uploads/sticker-pack/menhera-chan-emoji-v1/sticker_4.png?2a2616bf34ca5218d060573da7cab78f&d=200x200" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="apple-touch-icon" href="https://s3.getstickerpack.com/storage/uploads/sticker-pack/menhera-chan-emoji-v1/sticker_4.png?2a2616bf34ca5218d060573da7cab78f&d=200x200" /> -->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <!-- <title>Resume of Lai Chee Hoong</title> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
